k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: go-oauth2-server-local
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: go-oauth2-server-api
          image: k3d-registry.local.tashima.space/tashima42/go-oauth2-server/api
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8096
