k8s/ui-client-simulator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-client-simulator-deployment
  namespace: go-oauth2-server-local
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ui-client-simulator
  template:
    metadata:
      labels:
        component: ui-client-simulator
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: go-oauth2-server-ui
          image: k3d-registry.local.tashima.space/tashima42/go-oauth2-server/ui-client-simulator
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
