k8s/api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service
  namespace: go-oauth2-server
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 8096
      targetPort: 8096
