k8s/database-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-cluster-ip-service
  namespace: go-oauth2-server-local
spec:
  type: ClusterIP
  selector:
    component: database
  ports:
    - port: 5432
      targetPort: 5432
