k8s/ui-client-simulator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-client-simulator-service
  namespace: go-oauth2-server-local
spec:
  ports:
    - name: ui-client-simulator-service
      port: 8081
      targetPort: 80
  selector:
    component: ui-client-simulator
