k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: go-oauth2-server-local
spec:
  ports:
    - name: ui-service
      port: 8080
      targetPort: 80
  selector:
    component: ui
