k8s/ui-client-simulator-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: go-oauth2-server-ui-client-simulator-secure
  namespace: go-oauth2-server-local
spec:
  entrypoints:
    - web
  routes:
    - kind: Rule
      match: Host("client-simulator.local.tashima.space")
      services:
        - name: ui-client-simulator-service
          port: 8081
