k8s/ui-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: go-oauth2-server-ui-secure
  namespace: go-oauth2-server-local
spec:
  entrypoints:
    - web
  routes:
    - kind: Rule
      match: Host("oauth.local.tashima.space")
      services:
        - name: ui-service
          port: 8080
